# virtaboksi

./: .gitignore  .gitmodules  LICENSE.md  README.md  fp-lib-table  mosfet.kicad_sch  simulate.circuitjs.txt  stm8.h  virtaboksi.kicad_pcb  virtaboksi.kicad_pro  virtaboksi.kicad_sch  virtakytkin.kicad_pcb  virtakytkin.kicad_sch
Own.pretty/: Fuse-kindof_1x02_P3.6mm_D0.4mm_OD1mm.kicad_mod  Heatsink_AAVID_576802B03900G-nocourt.kicad_mod
blink/: Makefile  blink.c
docs/: 3d.avif
firmware/: .dir-locals.el  CMakeLists.txt  stm8.c  stm8.h  uploader
firmware/cmake/: sdcc-toolchain.cmake  uploader
firmware/hw0.2/: main.c
firmware/hw0.3/: main.c
firmware/hw0.4/: Makefile  board.h  iref.c  iref.h  main.c  pins.h  serial.c  serial.h  timers.c  timers.h  util.c  util.h
firmware/src/: Makefile  iref.c  main.c  serial.c  serial.h  settings.c  settings.h  timers.h
firmware/stm8-lib/: stm8.c  stm8.h
